# OpenADA

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
catalog/: semantic-surfaces-v0alpha1.json
conformance/circuit-simulate/: README.md  manifest.json  run.py  verify.py
conformance/circuit-simulate-v0alpha2/: README.md  manifest.json  run.py  verify.py
conformance/driver-kit/: README.md  check_result.py  driver-manifest.template.json  operation-profile.template.md  request.template.json
conformance/ihp-analog-measurements/: README.md  common.py  inside.py  manifest.json  requests.json  run.py  semantic-chain-run.json  setup.py  test_measurement_chain.py  verify.py
conformance/ihp-inverter/: README.md  common.py  manifest.json  run.py  run.schema.json  semantic-chain-run.json  semantic-chain.json  semantic-contract.json  semantic-decision.json  semantic-evidence.json  semantic-normalized.json  semantic-oracle.json  semantic-probes.json  semantic.py  setup.py  verify.py
conformance/ihp-inverter-agent-chain/: README.md  common.py  inside.py  manifest.json  requests.json  run.py  setup.py  test_agent_chain.py  verify.py
conformance/ihp-inverter-ngspice/: README.md  common.py  inside.py  manifest.json  run.py  run.schema.json  setup.py  verify.py
conformance/ihp-ngspice-provider-analyses/: README.md  contract.json  inside.py  manifest.json  oracle.py  replay.py  semantic-chain-run.json  verify.py
conformance/ihp-sar-rtl/: README.md  common.py  manifest.json  run.py  run.schema.json  semantic-chain-run.json  semantic-chain.json  semantic-contract.json  semantic-decision.json  semantic-evidence.json  semantic-normalized.json  semantic-oracle.json  semantic-probes.json  semantic.py  setup.py  verify.py  yosys_wrapper.py
conformance/orfs-ibex-synthesis-timing/: README.md  common.py  manifest.json  run.py  run.schema.json  semantic-chain-run.json  semantic-chain.json  semantic-contract.json  semantic-decision.json  semantic-evidence.json  semantic-normalized.json  semantic-oracle.json  semantic-probes.json  semantic.py  setup.py  verify.py
conformance/public-spice-portability/: README.md  common.py  (+7 more)
docs/: COMPATIBILITY.md  CONTRACT.md  CURRENT_DRIVERS.md  DRIVER_PROTOCOL.md  ENGINEERING_SKILLS.md  MEASUREMENT_METHODS.md  MUTATION_AND_VERSIONING.md  PROVIDERS_AND_MCP.md  ROADMAP.md  SEMANTIC_COVERAGE.md  SEMANTIC_MODEL.md  provider-ecosystem-profiles.md
integrations/hermes/: README.md  pyproject.toml  setup.py
integrations/hermes/src/openada_hermes_plugin/: __init__.py
profiles/: artifact.transform-v1alpha1.json  circuit.simulate-v1alpha1.json  circuit.simulate-v1alpha2.json  digital.hdl.simulate-v1alpha1.json  electromagnetic.analyze-v1alpha1.json  logic.synthesize-v1alpha1.json  network.parameters.extract-v1alpha1.json  result.measure-v1alpha1.json  result.series.extract-v1alpha1.json  result.spectral.measure-v1alpha1.json  result.transfer.measure-v1alpha1.json  rtl.lint-v1alpha1.json  rtl.test-v1alpha1.json  specification.evaluate-v1alpha1.json  timing.analyze-v1alpha1.json
schemas/: capability-manifest-v0alpha1.schema.json  conformance-receipt-v0alpha1.schema.json  design-provenance-v0alpha1.schema.json  driver-manifest-v0alpha1.schema.json  driver-mapping-v0alpha1.schema.json  invocation-context-v0alpha1.schema.json  job-receipt-v0alpha1.schema.json  locator-v0alpha1.schema.json  operation-profile-v0alpha1.schema.json  operation-profile-v0alpha2.schema.json  provider-bundle-v0alpha1.schema.json  readiness-v0alpha1.schema.json  request-v0alpha1.schema.json  request-v0alpha2.schema.json  result-v0alpha1.schema.json  result-v0alpha2.schema.json  semantic-chain-manifest-v0alpha1.schema.json  semantic-chain-run-v0alpha1.schema.json  semantic-surface-catalog-v0alpha1.schema.json  session-receipt-v0alpha1.schema.json
tests/: test_bootstrap_asic_skill.py  test_circuit_simulate_analyses.py  test_circuit_simulate_conformance.py  test_circuit_simulate_profile.py  test_cli.py  test_conformance.py  test_contract.py  test_digital_drivers.py  test_discovery.py  test_drc_compare.py  test_drc_review.py  test_driver_conformance.py  test_drivers.py  test_ecosystem_contracts.py  test_ecosystem_execution.py  test_hermes_plugin.py  test_ihp_ngspice_conformance.py  test_ihp_ngspice_provider_analyses.py  test_ihp_sar_rtl_conformance.py  test_klayout_contract.py  test_netgen_contract.py  test_ngspice_contract.py  test_ngspice_native.py  test_ngspice_outputs.py  test_ngspice_provider.py  test_ngspice_review_regressions.py  test_oci_image_identity.py  test_opensta_driver.py  test_orfs_ibex_synthesis_timing_conformance.py  test_paired_evaluation_contract.py  test_paired_evaluation_keys.py  test_paired_evaluation_score.py  test_paired_evaluation_trace.py  test_plugin_skills.py  test_preflight.py  test_process.py  test_protocol_schemas.py  test_provider_ecosystem_profiles.py  test_provider_runtime.py  test_result_series_extract.py  (+9 more)
tools/: semantic_publish_index.py  semantic_receipts.py  semantic_refresh_manifests.py  verify_semantic_coverage.py
(+526 files in other folders)
