[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "openada-hermes-plugin"
version = "0.4.0"
description = "Read-only OpenADA skill adapter for Hermes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openada==0.4.0",
]

[project.entry-points."hermes_agent.plugins"]
openada = "openada_hermes_plugin"

[tool.setuptools.packages.find]
where = ["src"]
